@@ -1,0 +1,78 @@
+/**
+ * Copyright 2005-2009 Noelios Technologies.
+ * 
+ * The contents of this file are subject to the terms of one of the following
+ * open source licenses: LGPL 3.0 or LGPL 2.1 or CDDL 1.0 or EPL 1.0 (the
+ * "Licenses"). You can select the license that you prefer but you may not use
+ * this file except in compliance with one of these Licenses.
+ * 
+ * You can obtain a copy of the LGPL 3.0 license at
+ * http://www.opensource.org/licenses/lgpl-3.0.html
+ * 
+ * You can obtain a copy of the LGPL 2.1 license at
+ * http://www.opensource.org/licenses/lgpl-2.1.php
+ * 
+ * You can obtain a copy of the CDDL 1.0 license at
+ * http://www.opensource.org/licenses/cddl1.php
+ * 
+ * You can obtain a copy of the EPL 1.0 license at
+ * http://www.opensource.org/licenses/eclipse-1.0.php
+ * 
+ * See the Licenses for the specific language governing permissions and
+ * limitations under the Licenses.
+ * 
+ * Alternatively, you can obtain a royalty free commercial license with less
+ * limitations, transferable or non-transferable, directly at
+ * http://www.noelios.com/products/restlet-engine
+ * 
+ * Restlet is a registered trademark of Noelios Technologies.
+ */
+
+package org.restlet.test.jaxrs.services.tests;
+
+import java.util.HashSet;
+import java.util.Set;
+
+import javax.ws.rs.core.Application;
+
+import org.restlet.Response;
+import org.restlet.data.MediaType;
+import org.restlet.data.Status;
+import org.restlet.representation.Representation;
+import org.restlet.test.jaxrs.services.providers.Issue971WriterSub;
+import org.restlet.test.jaxrs.services.resources.Issue971Resource;
+
+/**
+ * @author Martin Krasser
+ * 
+ * @see Issue971Resource
+ * @see Issue971WriterSub
+ */
+public class Issue971Test extends JaxRsTestCase {
+
+    @Override
+    protected Application getApplication() {
+        return new Application() {
+            @Override
+            public Set<Class<?>> getClasses() {
+                Set<Class<?>> classes = new HashSet<Class<?>>();
+                classes.add(Issue971Resource.class);
+                classes.add(Issue971WriterSub.class);
+                return classes;
+            }
+        };
+    }
+    /** 
+     * @see Issue971Resource#getIssue971()
+     */
+    public void testGet() throws Exception {
+        final Response response = get("971");
+        final Representation entity = response.getEntity();
+        sysOutEntityIfError(response);
+        assertEquals(Status.SUCCESS_OK, response.getStatus());
+        assertEqualMediaType(MediaType.TEXT_PLAIN, entity.getMediaType());
+        assertEquals("issue 971 description", entity.getText());
+    }
+
+}
+
